--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
 p {
   font-family: "Courier New", Courier, monospace, sans-serif;
   font-size: 18px;
-  color: yellow;
+  color: green;
 }
 
 main {
